# airflow-dags

./: .gitignore  .gitlab-ci.yml  .markdownlint.yaml  .markdownlint.yml  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  README.md  authenticate_decidim.py  dag-doc-template.md  dag_matomo_dag.py  dags_decidim_decidim_notify_new_comment_dag.py  dags_decidim_decidim_notify_new_proposal_dag.py  dags_decidim_decidim_on_n_off_proposals_dag.py  makefile  pyproject.toml  requirements.testing.txt  requirements.txt  setup.cfg  sonar-project.properties
DW/: dag_matomo_dag.py  matomo_dags_generator.py
Data Lake/: dag_extrair_propostas_para_minio.py
Notificacoes/: dags_decidim_decidim_notify_new_proposal_dag.py
automation/: dag_template.txt  generate_dbt_dag.py
dags/data_ingestion/: datas_feriados.py  dates_holidays.py  decidim_postgres_cursor_ingestion.py  ingestion_matomo.py  matomo_visits.py  postgres_databases.py  postgres_to_postgres_cursor_ingestion.py
dags/data_ingestion/cursor_ingestions/: bp_ingestion.json  ej_ingestion.json
dags/data_lake/: dag_extract_proposals_to_minio.py  dag_extrair_propostas_para_minio.py  dag_ingest_proposals_processes.py  etl_assembleia.py  etl_meeeting_comment.py  etl_meeting.py  etl_proposals.py  etl_surveys.py  ingest_update_proposals.py  ingest_updated_proposals.py  test_etl_proposals.py
dags/data_lake/queries/: confjuv_query.gql  get_meeting_comment_data.gql  get_meeting_data.gql  get_proposals_by_component_id.gql  get_proposals_by_id.gql  get_proposals_ids.gql  get_proposals_processes_participative.gql  get_surveys_data.gql  get_updat_at_proposals.gql  get_updated_at_proposals.gql
dags/data_warehouse/: dag_matomo_generator.py  dag_matomo_segmentation.py  matomo_dags_generator.py  tools.py
dags/data_warehouse/queries/: assemblies_slug_id.gql  processes_slug_id.gql
dags/dbt/: run_model__api_participatory_processes.py  run_model__comments.py  run_model__first_visitors_per_day.py  run_model__participatory_processes.py  run_model__proposal_metrics.py  run_model__proposals.py  run_model__users.py  run_model__visits.py  run_model__votes.py
dags/docs/: README.md  dag-doc_extract_proposals_to_minio.md  dag-doc_matomo_generator.md  dag-doc_notify_new_comments.md  dag-doc_notify_new_proposals.md  dag-doc_report_participatory_texts.md  dag-doc_report_proposals.md  dag-doc_template.md  dag_matomo_generator.md  onboarding.md
dags/notificacoes/: dags_decidim_decidim_notify_new_comment_dag.py  dags_decidim_decidim_notify_new_proposal_dag.py  dags_decidim_decidim_on_n_off_proposals_dag.py
dags/notifications/: dag_notify_new_comments.py  dag_notify_new_proposals.py  dag_on_n_off_proposals.py
dags/processes_confs/: dag_create_processes_config.py  dag_matomo_segmentation.py
dags/processes_confs/bot/: bot.py
dags/processes_confs/queries/: components_in_assemblies.gql  components_in_conferences.gql  components_in_consultations.gql  components_in_initiatives.gql  components_in_participatory_processes.gql
dags/relatorios/: dag_generate_report.py  dag_relatorio_consulta_publica.py
dags/reports/: dag_report_participatory_texts.py  dag_report_proposals.py
dags/reports/mock/: participatory_text.txt
dags/reports/templates/: template.html  template_participatory_texts.html  template_proposals.html
data_lake/: dag_extrair_propostas_para_minio.py
dbt_pg_project/: .user.yml  dbt_project.yml  package-lock.yml  profiles.yml
dbt_pg_project/models/dummy_model/: _tests.yml  posts.sql  posts_per_user.sql  users.sql
dbt_pg_project/models/matomo_report_proposals/: matomo_visits_weekly.sql  (+1 more)
docs/: README.md  dag-doc-template.md  dag-doc_extract_proposals_to_minio.md  dag-doc_matomo_generator.md  dag-doc_notify_new_comments.md  dag-doc_notify_new_proposals.md  dag-doc_report_participatory_texts.md  dag-doc_report_proposals.md  dag-doc_template.md  dag_extrair_propostas.md  dag_matomo_generator.md  dag_notify_comments.md  dag_notify_proposals.md  dag_relatorio_propostas.md
iframe_figures/: figure_135.html  figure_136.html  figure_137.html  figure_138.html  figure_140.html  figure_141.html  figure_142.html  figure_143.html  figure_144.html  figure_145.html  figure_146.html  figure_147.html  figure_148.html  figure_154.html  figure_157.html
lappis/: authenticate_decidim.py  decidim.py  decidim_hook.py  graphql.py
lappis/components/: proposals.py
lappis/gql/: escope.gql
notificacoes/: dags_decidim_decidim_notify_new_comment_dag.py  dags_decidim_decidim_notify_new_proposal_dag.py  dags_decidim_decidim_on_n_off_proposals_dag.py
plugins/: decidim_hook.py  report.py
plugins/components/: proposals.py
plugins/dbt_pg_project/: dbt_project.yml  documentation-flow.dbt.md  profiles.yml
plugins/faker/: matomo_faker.py
plugins/gql/: escope.gql
plugins/matomo/: hook.py
plugins/minio/: hooks.py
plugins/notifications/: base_dag.py
plugins/postgres_data_ingestion/: __init__.py  connection.py  decoder.py  message_processor.py  replication.py
plugins/reports/: airflow_data.json  decorators.py  main.py  participatory_texts.py  participatory_texts_report.py  proposals_report.py  report.py  script.py  styles.css  styles_participatory_texts.css  template.html  template_participatory_texts.html
plugins/telegram/: callbacks.py  decorators.py
plugins/utils/: dates.py  dict_utils.py
plugins/yaml/: config_reader.py
processes_confs/: decidim_process_confs_cnpct.yaml  decidim_process_confs_conjuv.yaml  decidim_process_confs_engd.yaml
relatorios/: dag_generate_report.py  relatorioDeMobilização.html  template_generate_jinja.py  template_relatorio.docx
relatorios/notebooks/: analysis.ipynb  report.py
tests/plugins/: test_decidim_hook.py
tmp/: tables.py
(+156 files in other folders)
