[metadata]
name = dags
description = Package with the dags
author = Paulo Goncalves
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    dags
    plugins
install_requires =
    apache-airflow-providers-jdbc
    apache-airflow-providers-google
    apache-airflow-providers-odbc
    apache-airflow-providers-common-sql
    apache-airflow-providers-telegram
    apache-airflow-providers-smtp
    apache-airflow-providers-postgres
    pandas==2.0.3
    beautifulsoup4==4.12.2
    tqdm==4.60.0
    xlrd==1.2.0
    great-expectations==0.17.2
    ipdb==0.13.13
    inflect==7.0.0
    boto3==1.34.19

python_requires = >=3.8
zip_safe = no

[options.extras_require]
testing =
    pytest>=8.0
    pytest-cov>=4.1
    mypy>=1.8.0
    ruff>=0.1.14
    tox>=4.12.1

# [options.package_data]
# dags = py.typed
# plugins = py.typed

[flake8]
max-line-length = 110
